--- a/lectures/L4/Exercise_1_final.ipynb
+++ b/lectures/L4/Exercise_1_final.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "str"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,6 +64,7 @@
     "f=open(\"prog_data.txt\",\"r\")\n",
     "text=f.read()\n",
     "text_clean=text.replace(\"\\n\",\"\")\n",
+    "f.close()\n",
     "print(text_clean)\n",
     "type(text_clean)"
    ]
