--- a/lectures/L4/Exercise_2_final.ipynb
+++ b/lectures/L4/Exercise_2_final.ipynb
@@ -16,6 +16,62 @@
     "\n",
     "**Note:** The same dictionary can be created by executing the following one-liner:  `species_dict_2 = dict(zip(species, names))`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hydrogen', 'Oxygen', 'Hydroxyl', 'Water', 'Hydrogen', 'Peroxide']\n",
+      "['H2', 'O2', 'OH', 'H2O', 'H2O2']\n",
+      "{'Hydrogen': 'H2O2', 'Oxygen': 'O2', 'Hydroxyl': 'OH', 'Water': 'H2O'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with open(\"names.txt\",\"r\") as f:\n",
+    "    species=f.read().split();\n",
+    "print(species)\n",
+    "with open(\"species.txt\",'r') as g:\n",
+    "    chemicals=g.read().split();\n",
+    "print(chemicals)\n",
+    "my_new_dict={};\n",
+    "for speci, chem in zip(species,chemicals):\n",
+    "    my_new_dict[speci]=chem\n",
+    "print(my_new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Hydrogen': 'H2O2', 'Oxygen': 'O2', 'Hydroxyl': 'OH', 'Water': 'H2O'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_second_dict=dict(zip(species, chemicals))\n",
+    "print(my_new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
