--- a/homeworks/HW3/HW3.ipynb
+++ b/homeworks/HW3/HW3.ipynb
@@ -42,6 +42,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd /tmp\n",
+    "git clone \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
