--- a/lectures/L5/Exercise_2.ipynb
+++ b/lectures/L5/Exercise_2.ipynb
@@ -15,6 +15,61 @@
     "\n",
     "**Hint:** Quadratic equations can have complex roots of the form $r = a + ib$ where $i=\\sqrt{-1}$ (Python uses the notation $j=\\sqrt{-1}$).  To deal with complex roots, you should import the `cmath` library and use `cmath.sqrt` when computing square roots.  `cmath` will return a complex number for you.  You could handle complex roots yourself if you want, but you might as well use available libraries to save some work."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning!\n",
+      " x has infinite numbers\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cmath\n",
+    "def find_root(a,b,c):\n",
+    "    if (a==0 and b==0 and c==0):\n",
+    "        print(\"warning!\\n x has infinite numbers\")\n",
+    "        return()\n",
+    "    elif (a==0 and b==0 and c!=0):\n",
+    "        print(\"error!\\n no x\")\n",
+    "        return()\n",
+    "    elif (a==0 and b!=0):\n",
+    "        print(\"warning!\\n x=\",-c/b)\n",
+    "        return(-c/b)\n",
+    "    else: \n",
+    "        x1=(-b+cmath.sqrt(b*b-4*a*c))/(2*a)\n",
+    "        x2=(-b-cmath.sqrt(b*b-4*a*c))/(2*a)\n",
+    "        print(\"x1=\",x1)\n",
+    "        print(\"x2=\",x2)\n",
+    "        return(x1,x2)\n",
+    "   \n",
+    "find_root(0,0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
