--- a/homeworks/HW3/HW3_final.ipynb
+++ b/homeworks/HW3/HW3_final.ipynb
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -522,11 +522,13 @@
      "output_type": "stream",
      "text": [
       "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "nothing to commit, working tree clean\n",
       "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "nothing to commit, working tree clean\n",
       "course\n",
@@ -538,27 +540,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'HW3_final.ipynb' did not match any files\n",
-      "To https://github.com/crystalzhaizhai/cs207_yi_zhai.git\n",
-      " ! [rejected]        master -> master (fetch first)\n",
-      "error: failed to push some refs to 'https://github.com/crystalzhaizhai/cs207_yi_zhai.git'\n",
-      "hint: Updates were rejected because the remote contains work that you do\n",
-      "hint: not have locally. This is usually caused by another repository pushing\n",
-      "hint: to the same ref. You may want to first integrate the remote changes\n",
-      "hint: (e.g., 'git pull ...') before pushing again.\n",
-      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\n"
+      "cat: .git/config: No such file or directory\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "cd /tmp/pla\n",
-    "git remote add upstream https://github.com/crystalzhaizhai/cs207_yi_zhai.git\n",
     "git add \"HW3_final.ipynb\"\n",
     "git commit -m \"HW3\" -a\n",
     "git status\n",
     "git remote\n",
-    "git push upstream master\n"
+    "git push\n",
+    "cat .git/config\n"
    ]
   },
   {
