--- a/homeworks/HW3/HW3_final.ipynb
+++ b/homeworks/HW3/HW3_final.ipynb
@@ -514,62 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/zhaiyi/cs207_yi_zhai/homeworks/HW3\n",
-      "course\n",
-      "origin\n",
-      "upstream\n",
-      "[core]\n",
-      "\trepositoryformatversion = 0\n",
-      "\tfilemode = true\n",
-      "\tbare = false\n",
-      "\tlogallrefupdates = true\n",
-      "\tignorecase = true\n",
-      "\tprecomposeunicode = true\n",
-      "[remote \"origin\"]\n",
-      "\turl = https://github.com/crystalzhaizhai/cs207_yi_zhai.git\n",
-      "\tfetch = +refs/heads/*:refs/remotes/origin/*\n",
-      "[branch \"master\"]\n",
-      "\tremote = origin\n",
-      "\tmerge = refs/heads/master\n",
-      "[remote \"upstream\"]\n",
-      "\turl = git@github.com:IACS-CS-207/cs207-F17.git\n",
-      "\tfetch = +refs/heads/*:refs/remotes/upstream/*\n",
-      "[remote \"course\"]\n",
-      "\turl = https://github.com/IACS-CS-207/cs207-F17.git\n",
-      "\tfetch = +refs/heads/*:refs/remotes/course/*\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "pwd\n",
-    "\n",
-    "git remote\n",
-    "cd ../..\n",
-    "cat .git/config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master 4b0e4db] HW3\n",
-      " 1 file changed, 8 insertions(+), 15 deletions(-)\n",
       "On branch master\n",
-      "Your branch is ahead of 'origin/master' by 2 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
+      "\n",
+      "nothing to commit, working tree clean\n",
+      "On branch master\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
       "\n",
       "nothing to commit, working tree clean\n",
       "course\n",
@@ -581,8 +538,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To https://github.com/crystalzhaizhai/cs207_yi_zhai.git\n",
-      "   d4afbeb..4b0e4db  master -> master\n"
+      "Everything up-to-date\n"
      ]
     }
    ],
