--- a/homeworks/HW3/HW3_final.ipynb
+++ b/homeworks/HW3/HW3_final.ipynb
@@ -514,19 +514,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[master cffa62f] HW3\n",
+      " 1 file changed, 7 insertions(+), 51 deletions(-)\n",
       "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "\n",
-      "nothing to commit, working tree clean\n",
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "nothing to commit, working tree clean\n",
       "course\n",
@@ -538,7 +537,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "To https://github.com/crystalzhaizhai/cs207_yi_zhai.git\n",
+      "   7b2330a..cffa62f  master -> master\n"
      ]
     }
    ],
