--- a/homeworks/HW3/HW3_final.ipynb
+++ b/homeworks/HW3/HW3_final.ipynb
@@ -361,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\"../../lectures/L4/languages.txt\",\"r\") as f:\n",
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -435,11 +437,13 @@
    "source": [
     "def kinetics(p,T, R=8.314):\n",
     "    import numpy as np\n",
+    "    if len(p)<3:\n",
+    "        print(\"Error! Less than 3 parameters\")\n",
     "    try:\n",
     "        k=p[0]*(T**p[1])*np.exp(-p[2]/(R*T))\n",
     "        return k\n",
     "    except ZeroDivisionError:\n",
-    "        print(\"Error!\")\n",
+    "        print(\"Error! Divided by 0\")\n",
     "        return()\n"
    ]
   },
