--- a/homeworks/HW3/HW3_final.ipynb
+++ b/homeworks/HW3/HW3_final.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -439,6 +439,7 @@
     "    import numpy as np\n",
     "    if len(p)<3:\n",
     "        print(\"Error! Less than 3 parameters\")\n",
+    "        return()\n",
     "    try:\n",
     "        k=p[0]*(T**p[1])*np.exp(-p[2]/(R*T))\n",
     "        return k\n",
@@ -449,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error!\n"
+      "Error! Less than 3 parameters\n"
      ]
     },
     {
@@ -465,13 +466,13 @@
        "()"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kinetics([1,2,3],0)"
+    "kinetics([1,2],0)"
    ]
   },
   {
