--- a/homeworks/HW4/HW4.ipynb
+++ b/homeworks/HW4/HW4.ipynb
@@ -86,7 +86,7 @@
     "You can fix things up by updating `balance` within the inner function.  But this won't work.  Try it out and explain why it doesn't work.  Try to use the language that we used in lecture.  **Hint:** [Python Execution Model](https://docs.python.org/3/reference/executionmodel.html).\n",
     "\n",
     "### Part 3\n",
-    "Now, make just one small change to your code from Part 2.  Declare `balance` as a nonlocal variable using the nonlocal keyword.  That is, make the first line of the inner function, say `nonlocal balance`.  Here's some information on the `nonlocal` statement:  [`nonlocal`](https://docs.python.org/3/reference/simple_stmts.html#nonlocal).\n",
+    "Now, make just one small change to your code from Part 2.  Declare `balance` as a nonlocal variable using the nonlocal keyword.  That is, before you get to the inner function, say `nonlocal balance`.  Here's some information on the `nonlocal` statement:  [`nonlocal`](https://docs.python.org/3/reference/simple_stmts.html#nonlocal).\n",
     "\n",
     "Now test things out like you did in Part 1.  It should be behaving correctly now.\n",
     "\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "## Problem 3\n",
-    "Let's return to the data from Problem 1.  Write two functions: 1.) The first function should return the average circle area (you can re-use the one you already wrote if you'd like, but you might need to update it slightly for this problem) and 2.) The second function should just use `numpy` to compute the average.\n",
+    "Let's return to the data from Problem 1.  Write two functions: 1.) The first function should return the average circle radius (you can re-use the one you already wrote if you'd like, but you might need to update it slightly for this problem) and 2.) The second function should just use `numpy` to compute the average.\n",
     "\n",
     "Write a decorator to time the evaluation of each function.  You can use the timing decorator from lecture.\n",
     "\n",
@@ -361,7 +361,6 @@
     "1. A case where positivity is not violated\n",
     "2. A case where positivity is violated"
    ]
-<<<<<<< HEAD
   },
   {
    "cell_type": "code",
@@ -455,8 +454,6 @@
     "## Problem 5\n",
     "Coming soon..."
    ]
-=======
->>>>>>> e661dc3702e65072c7d2ad764359a6d26d8227e7
   }
  ],
  "metadata": {
