--- a/homeworks/HW4/HW4_final.ipynb
+++ b/homeworks/HW4/HW4_final.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\"circles.txt\",\"r\") as f:\n",
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +107,7 @@
        "6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,6 +115,8 @@
    "source": [
     "def make_withdraw(balance):\n",
     "    def inner_func(withdraw):\n",
+    "        if (balance<withdraw):\n",
+    "            raise ValueError(\"balance is smaller than withdraw\")\n",
     "        return(balance-withdraw)\n",
     "    return(inner_func)\n",
     "initial_balance=10\n",
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +139,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-efc4bddc1adf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mnew_withdraw_amount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mwd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_withdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_balance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwithdraw_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_withdraw_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-18-efc4bddc1adf>\u001b[0m in \u001b[0;36minner_func\u001b[0;34m(withdraw)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_withdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minner_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwithdraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbalance\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mwithdraw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mbalance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-88ece35f2e4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mnew_withdraw_amount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mwd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_withdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_balance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwithdraw_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_withdraw_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-88ece35f2e4a>\u001b[0m in \u001b[0;36minner_func\u001b[0;34m(withdraw)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_withdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minner_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwithdraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbalance\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mwithdraw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbalance\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mwithdraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"balance is smaller than withdraw\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'balance' referenced before assignment"
      ]
     }
@@ -145,6 +149,8 @@
     "def make_withdraw(balance):\n",
     "    def inner_func(withdraw):\n",
     "        p=balance-withdraw\n",
+    "        if (balance<withdraw):\n",
+    "            raise ValueError(\"balance is smaller than withdraw\")\n",
     "        balance=p\n",
     "        return(p)\n",
     "    return(inner_func)\n",
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +180,7 @@
        "4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,6 +190,8 @@
     "    def inner_func(withdraw):\n",
     "        nonlocal balance\n",
     "        p=balance-withdraw\n",
+    "        if (balance<withdraw):\n",
+    "            raise ValueError(\"balance is smaller than withdraw\")\n",
     "        balance=p\n",
     "        return(p)\n",
     "    return(inner_func)\n",
@@ -197,26 +205,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe width=\"800\" height=\"400\" frameborder=\"0\" src=\"http://pythontutor.com/visualize.html#code=def%20make_withdraw%28balance%29%3A%20%20%0A%20%20%20%20%0A%20%20%20%20def%20inner_func%28withdraw%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20balance%0A%20%20%20%20%20%20%20%20p%3Dbalance-withdraw%0A%20%20%20%20%20%20%20%20balance%3Dp%0A%20%20%20%20%20%20%20%20return%28p%29%0A%20%20%20%20return%28inner_func%29%0Ainitial_balance%3D10%0Awithdraw_amount%3D2%0Anew_withdraw_amount%3D4%0Awd%3Dmake_withdraw%28initial_balance%29%0Awd%28withdraw_amount%29%0Awd%28new_withdraw_amount%29&cumulative=false&curInstr=2&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
+       "<iframe width=\"800\" height=\"400\" frameborder=\"0\" src=\"http://pythontutor.com/visualize.html#code=def%20make_withdraw%28balance%29%3A%20%20%0A%20%20%20%20%0A%20%20%20%20def%20inner_func%28withdraw%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20balance%0A%20%20%20%20%20%20%20%20p%3Dbalance-withdraw%0A%20%20%20%20%20%20%20%20if%20%28balance%3Cwithdraw%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22balance%20is%20smaller%20than%20withdraw%22%29%0A%20%20%20%20%20%20%20%20balance%3Dp%0A%20%20%20%20%20%20%20%20return%28p%29%0A%20%20%20%20return%28inner_func%29%0Ainitial_balance%3D10%0Awithdraw_amount%3D2%0Anew_withdraw_amount%3D4%0Awd%3Dmake_withdraw%28initial_balance%29%0Awd%28withdraw_amount%29%0Awd%28new_withdraw_amount%29&cumulative=false&curInstr=0&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML # Allows us to embed HTML into our notebook.\n",
-    "HTML('<iframe width=\"800\" height=\"400\" frameborder=\"0\" src=\"http://pythontutor.com/visualize.html#code=def%20make_withdraw%28balance%29%3A%20%20%0A%20%20%20%20%0A%20%20%20%20def%20inner_func%28withdraw%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20balance%0A%20%20%20%20%20%20%20%20p%3Dbalance-withdraw%0A%20%20%20%20%20%20%20%20balance%3Dp%0A%20%20%20%20%20%20%20%20return%28p%29%0A%20%20%20%20return%28inner_func%29%0Ainitial_balance%3D10%0Awithdraw_amount%3D2%0Anew_withdraw_amount%3D4%0Awd%3Dmake_withdraw%28initial_balance%29%0Awd%28withdraw_amount%29%0Awd%28new_withdraw_amount%29&cumulative=false&curInstr=2&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>')"
+    "HTML('<iframe width=\"800\" height=\"400\" frameborder=\"0\" src=\"http://pythontutor.com/visualize.html#code=def%20make_withdraw%28balance%29%3A%20%20%0A%20%20%20%20%0A%20%20%20%20def%20inner_func%28withdraw%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20balance%0A%20%20%20%20%20%20%20%20p%3Dbalance-withdraw%0A%20%20%20%20%20%20%20%20if%20%28balance%3Cwithdraw%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22balance%20is%20smaller%20than%20withdraw%22%29%0A%20%20%20%20%20%20%20%20balance%3Dp%0A%20%20%20%20%20%20%20%20return%28p%29%0A%20%20%20%20return%28inner_func%29%0Ainitial_balance%3D10%0Awithdraw_amount%3D2%0Anew_withdraw_amount%3D4%0Awd%3Dmake_withdraw%28initial_balance%29%0Awd%28withdraw_amount%29%0Awd%28new_withdraw_amount%29&cumulative=false&curInstr=0&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>')"
    ]
   },
   {
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -259,40 +267,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cmath\n",
-    "def my_ave(area_list):\n",
-    "    return cmath.sqrt(myave(area_list)/3.14)\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import cmath\n",
-    "def np_ave(radii_list):\n",
-    "    return cmath.sqrt(myave(area_list)/3.14)"
+    "def my_ave(area_list):\n",
+    "    return myave(area_list)\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import cmath\n",
+    "def np_ave(area_np):\n",
+    "    return myave(area_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1.0086061063899268+0j)\n",
-      "(1.0086061063899268+0j)\n"
+      "3.194278912439731\n",
+      "3.19427891244\n"
      ]
     }
    ],
@@ -324,17 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time Elapsed 0.00010085105895996094\n",
-      "(1.0086061063899268+0j)\n",
-      "Time Elapsed 0.00033783912658691406\n",
-      "(1.0086061063899268+0j)\n"
+      "Time Elapsed 0.00010538101196289062\n",
+      "3.194278912439731\n",
+      "Time Elapsed 0.00025916099548339844\n",
+      "3.19427891244\n"
      ]
     }
    ],
@@ -364,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -372,13 +382,14 @@
    "source": [
     "def positive_check(f):\n",
     "    def inner(*args):\n",
-    "        return (f(*args)>0)\n",
+    "        if (f(*args)<0):\n",
+    "             raise ValueError(\"The result is negative\")\n",
     "    return inner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -418,19 +429,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
-      "True\n",
-      "False\n",
-      "True\n",
-      "False\n"
+      "None\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The result is negative",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-f6bb8fb68706>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-28-6aad5df2c66b>\u001b[0m in \u001b[0;36minner\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m              \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The result is negative\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The result is negative"
      ]
     }
    ],
