--- a/homeworks/HW5/HW5.ipynb
+++ b/homeworks/HW5/HW5.ipynb
@@ -60,6 +60,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roots.py: cannot open `roots.py' (No such file or directory)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 3: syntax error near unexpected token `('\n",
+      "bash: line 3: `def linear_roots(a=1.0, b=0.0):'\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ../../../cs207test\n",
+    "file roots.py\n",
+    "\n",
+    "def linear_roots(a=1.0, b=0.0):\n",
+    "    if a == 0:\n",
+    "        raise ValueError(\"The linear coefficient is zero.  This is not a linear equation.\")\n",
+    "    else:\n",
+    "        return ((-b / a))\n",
+    "\n",
+    "def quad_roots(a=1.0, b=2.0, c=0.0):  \n",
+    "    import cmath # Can return complex numbers from square roots\n",
+    "    if a == 0:\n",
+    "        raise ValueError(\"The quadratic coefficient is zero.  This is not a quadratic equation.\")\n",
+    "    else:\n",
+    "        sqrtdisc = cmath.sqrt(b * b - 4.0 * a * c)\n",
+    "        r1 = -b + sqrtdisc\n",
+    "        r2 = -b - sqrtdisc\n",
+    "        return (r1 / 2.0 / a, r2 / 2.0 / a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
