--- a/lectures/L7/L7.ipynb
+++ b/lectures/L7/L7.ipynb
@@ -553,6 +553,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
