--- a/lectures/L9/Exercise_1.ipynb
+++ b/lectures/L9/Exercise_1.ipynb
@@ -14,6 +14,73 @@
     "* Include methods to compute the radius, area, and circumference of the circle\n",
     "* Demo your `Circle` class"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Circle():\n",
+    "    \n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "        \n",
+    "    def radius(self):\n",
+    "        import math\n",
+    "        return(math.sqrt(self.x**2+self.y**2))\n",
+    "       \n",
+    "    def area(self):\n",
+    "        return(self.x**2+self.y**2)*3.14\n",
+    "    def circumference(self):\n",
+    "        import math\n",
+    "        return(math.sqrt(self.x**2+self.y**2)*2*3.14)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "78.5\n",
+      "31.400000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "r=Circle(3,4).radius\n",
+    "print(Circle(3,4).radius())\n",
+    "print(Circle(3,4).area())\n",
+    "print(Circle(3,4).circumference())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
