--- a/homeworks/HW5/HW5.ipynb
+++ b/homeworks/HW5/HW5.ipynb
@@ -61,22 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "roots.py: cannot open `roots.py' (No such file or directory)\n"
+      "roots.py: ASCII English text\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "bash: line 3: syntax error near unexpected token `('\n",
-      "bash: line 3: `def linear_roots(a=1.0, b=0.0):'\n"
+      "bash: line 4: syntax error near unexpected token `('\n",
+      "bash: line 4: `def linear_roots(a=1.0, b=0.0):'\n"
      ]
     }
    ],
@@ -381,6 +381,289 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing reaction_coeffs.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file reaction_coeffs.py\n",
+    "from math import exp\n",
+    "def k_constant(k):\n",
+    "    return k\n",
+    "def k_arr(a,e,t):\n",
+    "    r=8.314\n",
+    "    if a<= 0:\n",
+    "        raise ValueError(\"a<0!\")\n",
+    "    if t<= 0:\n",
+    "        raise ValueError(\"t<0!\")\n",
+    "\n",
+    "    return (a*exp(-e/(r*t)))\n",
+    "def k_mod_arr(a,e,t,b):\n",
+    "    r=8.314\n",
+    "    if a<= 0:\n",
+    "        raise ValueError(\"a<0!\")\n",
+    "    if t<= 0:\n",
+    "        raise ValueError(\"t<0!\")\n",
+    "    return (a*(t**b)*exp(-e/(r*t)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing reaction1_rate.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file reaction1_rate.py\n",
+    "import numpy as np\n",
+    "import copy\n",
+    "def reaction_rate1(x,v,vv,k):\n",
+    "    \"\"\"Returns reaction rate of chemical reactoins\n",
+    "    \n",
+    "    INPUTS\n",
+    "    =======\n",
+    "    x: array of float\n",
+    "        concentration of molecule species\n",
+    "    v: array of integers\n",
+    "        Coefficient of molecule species on the left side of equation\n",
+    "    vv: array of integers\n",
+    "        Coefficient of melecule species on the right side of equation\n",
+    "    kk: array of float\n",
+    "        reaction rate coefficient\n",
+    "    \n",
+    "    RETURNS\n",
+    "    ========\n",
+    "    roots: array of floats\n",
+    "    \n",
+    "    EXAMPLES\n",
+    "    =========\n",
+    "    >>> reaction_rate1(np.array([[1.0],[2.0],[1]]),np.array([[1,0],[2,0],[0,2]]),np.array([[0,1],[0,2],[1,0]]),[10,10])\n",
+    "    array([[-40.],\n",
+    "           [ 10.],\n",
+    "           [-80.],\n",
+    "           [ 20.],\n",
+    "           [ 40.],\n",
+    "           [-20.]])\n",
+    "    \"\"\"\n",
+    "    if (any([kk<0 for kk in k])):\n",
+    "        raise ValueError(\"k<0\")\n",
+    "    flag=True\n",
+    "    for j in range(v.shape[1]):\n",
+    "        if all([v[i][j]<=0 for i in range(v.shape[0])]):\n",
+    "            flag=False\n",
+    "            break \n",
+    "    if (flag==False):\n",
+    "        raise ValueError(\"no reactants\")\n",
+    "    flag=True\n",
+    "    for j in range(vv.shape[1]):\n",
+    "        if all([vv[i][j]<=0 for i in range(vv.shape[0])]):\n",
+    "            flag=False\n",
+    "            break \n",
+    "    if (flag==False):\n",
+    "        raise ValueError(\"no products\")\n",
+    "    if x.shape[0]!=v.shape[0] or v.shape!=vv.shape or v.shape[1]!=len(k):\n",
+    "        raise ValueError(\"dimensions not match\")\n",
+    "    tmp=np.array([x[i][0]**v[i][j] for i in range(v.shape[0]) for j in range(v.shape[1])]).reshape(v.shape)\n",
+    "    w=copy.copy(k)\n",
+    "    for i in range(len(x)):\n",
+    "        for j in range(v.shape[1]):\n",
+    "            a=tmp[i][j]\n",
+    "            w[j]*=a\n",
+    "            \n",
+    "    return (np.transpose([np.array([w[j]*(vv[i][j]-v[i][j]) for i in range(len(x)) for j in range(v.shape[1])])]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing reaction1_test.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file reaction1_test.py\n",
+    "import reaction1_rate as rr1\n",
+    "import numpy as np\n",
+    "def test_normal1():\n",
+    "    x=np.array([[1.0],[2.0],[1]])\n",
+    "    v_i_prime=np.array([[1,0],[2,0],[0,2]])\n",
+    "    v_i_prime_prime=np.array([[0,1],[0,2],[1,0]])\n",
+    "    k=[10,10]\n",
+    "    assert all(rr1.reaction_rate1(x,v_i_prime,v_i_prime_prime,k)==[[-40],[10],[-80],[20],[40],[-20]])\n",
+    "\n",
+    "def test_nagative_k1():\n",
+    "    try:\n",
+    "        x=np.array([[1.0],[2.0],[1]])\n",
+    "        v_i_prime=np.array([[1,2],[2,0],[0,2]])\n",
+    "        v_i_prime_prime=np.array([[0,0],[0,1],[2,1]])\n",
+    "        k=[-10,10]\n",
+    "        rr1.reaction_rate1(x,v_i_prime,v_i_prime_prime,k)\n",
+    "    except ValueError as err:\n",
+    "        assert(True)\n",
+    "\n",
+    "def test_reactants1():\n",
+    "    try:\n",
+    "        x=np.array([[1.0],[2.0],[1]])\n",
+    "        v_i_prime=np.array([[0,2],[0,0],[0,2]])\n",
+    "        v_i_prime_prime=np.array([[0,0],[0,1],[2,1]])\n",
+    "        k=[10,10]\n",
+    "        rr1.reaction_rate1(x,v_i_prime,v_i_prime_prime,k)\n",
+    "    except ValueError as err:\n",
+    "        assert(True)\n",
+    "\n",
+    "def test_products1():\n",
+    "    try:\n",
+    "        x=np.array([[1.0],[2.0],[1]])\n",
+    "        v_i_prime=np.array([[1,2],[2,0],[0,2]])\n",
+    "        v_i_prime_prime=np.array([[0,0],[0,0],[2,0]])\n",
+    "        k=[10,10]\n",
+    "        rr1.reaction_rate1(x,v_i_prime,v_i_prime_prime,k)\n",
+    "    except ValueError as err:\n",
+    "        assert(True)\n",
+    "def test_dimensions1():\n",
+    "    try:\n",
+    "        x=np.array([[1.0],[2.0]])\n",
+    "        v_i_prime=np.array([[1,2],[2,0],[0,2]])\n",
+    "        v_i_prime_prime=np.array([[0,0],[0,0],[2,0]])\n",
+    "        k=[10,10]\n",
+    "        rr1.reaction_rate1(x,v_i_prime,v_i_prime_prime,k)\n",
+    "    except ValueError as err:\n",
+    "        assert(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 items had no tests:\n",
+      "    __main__\n",
+      "0 tests in 1 items.\n",
+      "0 passed and 0 failed.\n",
+      "Test passed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "doctest.testmod(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile:\n",
+      "plugins: cov-2.5.1\n",
+      "collected 5 items \u001b[0m\u001b[1m\n",
+      "\u001b[0m\n",
+      "reaction1_test.py .....\n",
+      "\n",
+      "\u001b[32m\u001b[1m=========================== 5 passed in 0.26 seconds ===========================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhaiyi/cs207_yi_zhai/homeworks/HW5\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile:\n",
+      "plugins: cov-2.5.1\n",
+      "collected 5 items \u001b[0m\u001b[1m\n",
+      "\u001b[0m\n",
+      "reaction1_test.py .....\n",
+      "\n",
+      "---------- coverage: platform darwin, python 3.6.1-final-0 -----------\n",
+      "Name                Stmts   Miss  Cover\n",
+      "---------------------------------------\n",
+      "reaction1_rate.py      28      1    96%\n",
+      "reaction1_test.py      44      0   100%\n",
+      "---------------------------------------\n",
+      "TOTAL                  72      1    99%\n",
+      "\n",
+      "\n",
+      "\u001b[32m\u001b[1m=========================== 5 passed in 0.27 seconds ===========================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest --cov"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -419,6 +702,15 @@
     "\n",
     "You may assume that these are elementary reactions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
