--- a/homeworks/HW5/HW5-final.ipynb
+++ b/homeworks/HW5/HW5-final.ipynb
@@ -152,31 +152,38 @@
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
-      "rootdir: /Users/zhaiyi/cs207test, inifile: setup.cfg\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile: setup.cfg\n",
       "plugins: cov-2.5.1\n",
-      "collected 9 items \u001b[0m\u001b[1m\u001b[1m\n",
+      "collected 22 items \u001b[0m\u001b[1m[1m\n",
       "\u001b[0m\n",
+      "chemkin.py .\n",
+      "progress1_rate.py .\n",
+      "progress1_test.py .....\n",
       "progress_rate.py .\n",
       "progress_test.py ....\n",
+      "reaction1_rate.py .\n",
+      "reaction1_test.py .....\n",
       "roots.py .\n",
       "test_roots.py ...\n",
       "\n",
       "---------- coverage: platform darwin, python 3.6.1-final-0 -----------\n",
       "Name                 Stmts   Miss  Cover   Missing\n",
       "--------------------------------------------------\n",
-      "chemkin.py              27     25     7%   3-28\n",
+      "chemkin.py              28      8    71%   32, 36-37, 39, 43-44, 46, 48\n",
+      "progress1_rate.py       28      0   100%\n",
+      "progress1_test.py       44      0   100%\n",
       "progress_rate.py        14      0   100%\n",
       "progress_test.py        34      0   100%\n",
+      "reaction1_rate.py       28      0   100%\n",
+      "reaction1_test.py       44      0   100%\n",
       "reaction_coeffs.py      17     13    24%   3, 5-11, 13-18\n",
-      "reaction_rate1.py       28     25    11%   4-29\n",
-      "reaction_test1.py       44     37    16%   4-8, 11-18, 21-28, 31-38, 40-47\n",
       "roots.py                 8      0   100%\n",
       "test_roots.py           13      0   100%\n",
       "--------------------------------------------------\n",
-      "TOTAL                  185    100    46%\n",
+      "TOTAL                  258     21    92%\n",
       "\n",
       "\n",
-      "\u001b[32m\u001b[1m=========================== 9 passed in 0.35 seconds ===========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 22 passed in 0.36 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +651,7 @@
        "TestResults(failed=0, attempted=0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -665,12 +672,17 @@
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
-      "rootdir: /Users/zhaiyi/cs207test, inifile: setup.cfg\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile: setup.cfg\n",
       "plugins: cov-2.5.1\n",
-      "collected 9 items \u001b[0m\u001b[1m\n",
+      "collected 22 items \u001b[0m\u001b[1m\n",
       "\u001b[0m\n",
+      "chemkin.py .\n",
+      "progress1_rate.py .\n",
+      "progress1_test.py .....\n",
       "progress_rate.py .\n",
       "progress_test.py ....\n",
+      "reaction1_rate.py .\n",
+      "reaction1_test.py .....\n",
       "roots.py .\n",
       "test_roots.py ...\n",
       "\n",
@@ -680,7 +692,7 @@
       "roots.py       8      0   100%\n",
       "\n",
       "\n",
-      "\u001b[32m\u001b[1m=========================== 9 passed in 0.31 seconds ===========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 22 passed in 0.33 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
@@ -690,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -699,31 +711,38 @@
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
-      "rootdir: /Users/zhaiyi/cs207test, inifile: setup.cfg\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile: setup.cfg\n",
       "plugins: cov-2.5.1\n",
-      "collected 9 items \u001b[0m\u001b[1m\u001b[1m\n",
+      "collected 22 items \u001b[0m\u001b[1m\u001b[1m\n",
       "\u001b[0m\n",
+      "chemkin.py .\n",
+      "progress1_rate.py .\n",
+      "progress1_test.py .....\n",
       "progress_rate.py .\n",
       "progress_test.py ....\n",
+      "reaction1_rate.py .\n",
+      "reaction1_test.py .....\n",
       "roots.py .\n",
       "test_roots.py ...\n",
       "\n",
       "---------- coverage: platform darwin, python 3.6.1-final-0 -----------\n",
       "Name                 Stmts   Miss  Cover   Missing\n",
       "--------------------------------------------------\n",
-      "chemkin.py              27     25     7%   3-28\n",
+      "chemkin.py              28      8    71%   32, 36-37, 39, 43-44, 46, 48\n",
+      "progress1_rate.py       28      0   100%\n",
+      "progress1_test.py       44      0   100%\n",
       "progress_rate.py        14      0   100%\n",
       "progress_test.py        34      0   100%\n",
+      "reaction1_rate.py       28      0   100%\n",
+      "reaction1_test.py       44      0   100%\n",
       "reaction_coeffs.py      17     13    24%   3, 5-11, 13-18\n",
-      "reaction_rate1.py       28     25    11%   4-29\n",
-      "reaction_test1.py       44     37    16%   4-8, 11-18, 21-28, 31-38, 40-47\n",
       "roots.py                 8      0   100%\n",
       "test_roots.py           13      0   100%\n",
       "--------------------------------------------------\n",
-      "TOTAL                  185    100    46%\n",
+      "TOTAL                  258     21    92%\n",
       "\n",
       "\n",
-      "\u001b[32m\u001b[1m=========================== 9 passed in 0.34 seconds ===========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 22 passed in 0.37 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
@@ -792,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1176,7 @@
        "TestResults(failed=0, attempted=0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1197,7 @@
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.6.1, pytest-3.0.7, py-1.4.33, pluggy-0.4.0\n",
-      "rootdir: /Users/zhaiyi/cs207test, inifile: setup.cfg\n",
+      "rootdir: /Users/zhaiyi/cs207_yi_zhai/homeworks/HW5, inifile: setup.cfg\n",
       "plugins: cov-2.5.1\n",
       "collected 22 items \u001b[0m\u001b[1m[1m\n",
       "\u001b[0m\n",
@@ -1259,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
